# BSc-koder

./: README.md
Datastrøm_sensorer/: Seabird_37.txt  Signature500.txt
Main (Sjøbunnsenhet)/: main.c
Mottaker(Bøyeenhet)/: main.c
Python_simulering/: Wake_and_poll.py
SD-kort/: SD_kort_complete.c
STM32_HAL_Peripherals/: CMakeLists.txt  stm32u5xx_hal_msp.c  stm32u5xx_it.c
